--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "nodemon --watch src --exec ts-node src/index.ts",
+    "dev": "nodemon",
     "dev:tsx": "tsx watch src/index.ts",
     "dev:debug": "node --inspect -r tsx/cjs src/index.ts",
+    "dev:hello": "tsx src/dev-hello.ts",
     "build": "tsc",
     "build:alias": "tsc && tsc-alias",
     "build:clean": "rm -rf dist && npm run build",
@@ -38,6 +39,9 @@
     "start:tsnode": "npx ts-node src/index.ts",
     "db:migrate": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
+    "db:migrate:deploy": "prisma migrate deploy",
+    "db:push": "prisma db push",
+    "db:pull": "prisma db pull",
     "db:generate": "prisma generate",
     "db:seed": "tsx prisma/seed.ts",
     "db:studio": "prisma studio",
@@ -76,6 +80,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^8.51.0",
@@ -94,6 +99,7 @@
     "prisma": "^7.2.0",
     "standard-version": "^9.5.0",
     "supertest": "^7.1.4",
+    "@types/supertest": "^2.0.12",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
     "tsconfig-paths": "^4.2.0",
@@ -104,6 +110,7 @@
   },
   "dependencies": {
     "@bull-board/express": "^6.16.2",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
     "@sinclair/typebox": "^0.34.46",
     "bcrypt": "^6.0.0",
