--- a/.dockerignore
+++ b/.dockerignore
@@ -1,20 +1,20 @@
 # =============================================================================
 # .dockerignore
 # =============================================================================
-# node_modules
-# dist
-# .env
-# .env.*
-# !.env.example
-# npm-debug.log*
-# yarn-debug.log*
-# yarn-error.log*
-# .git
-# .gitignore
-# .vscode
-# .idea
-# *.md
-# .DS_Store
-# coverage
-# .nyc_output
-# tests
+node_modules
+dist
+.env
+.env.*
+!.env.example
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.git
+.gitignore
+.vscode
+.idea
+*.md
+.DS_Store
+coverage
+.nyc_output
+tests
