--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
       "@jobs/*": ["src/jobs/*"],
       "@docs/*": ["src/docs/*"],
       "@tests/*": ["tests/*"],
+      "@/generated/*": ["src/generated/*"]
     },
     "target": "ES2022",
     "lib": ["ES2022"],
@@ -77,11 +78,11 @@
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
+    "isolatedModules": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
   "ts-node": {
-    "require": ["tsconfig-paths/register"],
-  },
+    "require": ["tsconfig-paths/register"]
+  }
 }
