--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,11 @@ coverage/
 .nyc_output
 
 # IDEs
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
 .idea/
 *.swp
 *.swo
