--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,15 +2,12 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-    "rootDir": "./src",
     "outDir": "./dist",
-
     // Environment Settings
     // See also https://aka.ms/tsconfig/module
     "module": "nodenext",
     "moduleResolution": "nodenext",
     "resolveJsonModule": true,
-
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
@@ -34,7 +31,6 @@
     // "lib": ["esnext"],
     // "types": ["node"],
     // and npm install -D @types/node
-
     /* Emit */
     "declaration": true,
     "declarationMap": true,
@@ -42,7 +38,6 @@
     "removeComments": true,
     "importHelpers": true,
     "downlevelIteration": true,
-
     // Style Options
     // "noImplicitReturns": true,
     // "noImplicitOverride": true,
@@ -50,16 +45,13 @@
     // "noUnusedParameters": true,
     // "noFallthroughCasesInSwitch": true,
     // "noPropertyAccessFromIndexSignature": true,
-
     // Recommended Options
     "jsx": "react-jsx",
     "verbatimModuleSyntax": true,
     "noUncheckedSideEffectImports": true,
     "moduleDetection": "force",
-
     /* Completeness */
     "skipLibCheck": true,
-
     /* Type Checking */
     // Stricter Typechecking Options
     "strict": true,
@@ -72,7 +64,6 @@
     "noImplicitOverride": true,
     "allowUnusedLabels": false,
     "allowUnreachableCode": false,
-
     // Additional
     /* Interop Constraints */
     "esModuleInterop": true,
@@ -80,9 +71,6 @@
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts", "**/*.spec.ts"],
-  "ts-node": {
-    "require": ["tsconfig-paths/register"]
-  }
+  "include": ["src/**/*", "tests/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
