feat(docker): initialize infrastructure and compose v2 support

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "start:dist": "node dist/index.js",
     "start:prod": "NODE_ENV=production node dist/index.js",
     "start:tsnode": "npx ts-node src/index.ts",
-    "db:infra": "docker-compose up -d postgres redis",
+    "db:infra": "docker compose up -d postgres redis",
     "db:migrate": "prisma migrate dev",
     "db:migrate:prod": "prisma migrate deploy",
     "db:migrate:deploy": "prisma migrate deploy",
@@ -67,9 +67,9 @@
     "validate": "npm run type-check && npm run lint:check && npm run test:unit",
     "prepare": "husky install",
     "docker:build": "docker build -t nodets .",
-    "docker:up": "docker-compose up -d",
-    "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f",
+    "docker:up": "docker compose up -d",
+    "docker:down": "docker compose down",
+    "docker:logs": "docker compose logs -f",
     "docker:restart": "npm run docker:down && npm run docker:up",
     "docs:generate": "typedoc --out docs src",
     "release": "standard-version"
