--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm install
+      - name: Generate Prisma Client
+        run: npx prisma generate
       - run: npm run type-check
       - run: npm run lint
       - run: npm run build
