--- a/package.json
+++ b/package.json
@@ -65,18 +65,19 @@
     "format:check": "prettier --check \"src/**/*.ts\"",
     "type-check": "tsc --noEmit",
     "validate": "npm run type-check && npm run lint:check && npm run test:unit",
-    "prepare": "husky install",
+    "prepare": "husky",
     "docker:build": "docker build -t nodets .",
     "docker:up": "docker compose up -d",
     "docker:down": "docker compose down",
     "docker:logs": "docker compose logs -f",
     "docker:restart": "npm run docker:down && npm run docker:up",
     "docs:generate": "typedoc --out docs src",
-    "release": "standard-version"
+    "release": "release-it"
   },
   "devDependencies": {
     "@commitlint/cli": "^20.3.0",
     "@commitlint/config-conventional": "^20.3.0",
+    "@release-it/conventional-changelog": "10.0.4",
     "@types/bcrypt": "^6.0.0",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
@@ -96,12 +97,12 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
-    "husky": "^8.0.3",
+    "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "nodemon": "^3.1.11",
     "prettier": "^3.7.4",
     "prisma": "^7.2.0",
-    "standard-version": "^9.5.0",
+    "release-it": "19.2.2",
     "supertest": "^7.1.4",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.16",
@@ -151,5 +152,9 @@
   "engines": {
     "node": ">=20.0.0",
     "npm": ">=10.0.0"
+  },
+  "overrides": {
+    "glob": "^11.0.0",
+    "inflight": "npm:lru-cache@^11.0.0"
   }
 }
